# gaurd

./: .dockerignore  .env.local  .gitignore  App.tsx  Dockerfile  Dockerfile.testserver  Procfile  README.md  apply_mypy_ignores.py  coverage.xml  docker-compose.yml  fix_code.py  fix_imports.py  ignore_mypy.py  implementation_plan.md  index.html  mypy_errors.txt  package-lock.json  package.json  pyproject.toml  railway.json  requirements.txt  start.sh  test_server.py  vercel.json
.claude/agents/: code-debugger.md  crawler-architect.md  deep-researcher.md  deploy-ops.md  fuzzer-engine.md  infra-builder.md  readme-writer.md  scanner-debugger.md  security-researcher.md  ui-designer.md  vuln-analyst.md
.github/workflows/: ci.yml
api/: index.py
components/: DashboardStats.tsx  Sidebar.tsx
docs/: detection-signatures.md  vuln-coverage.md
docs/decisions/: tech-stack.md
phishing-extension/: background.js  manifest.json  popup.html  popup.js
reports/: .gitkeep
reports/test/: sentinal-fuzz_127.0.0.1_51941_20260627_194211.json  sentinal-fuzz_127.0.0.1_51941_20260627_194215.json  sentinal-fuzz_127.0.0.1_51941_20260627_194219.json  sentinal-fuzz_127.0.0.1_51941_20260627_194223.json  sentinal-fuzz_127.0.0.1_51941_20260627_194228.json  sentinal-fuzz_127.0.0.1_51941_20260627_194232.json  sentinal-fuzz_127.0.0.1_51941_20260627_194236.json  sentinal-fuzz_127.0.0.1_51941_20260627_194240.json  sentinal-fuzz_127.0.0.1_51941_20260627_194245.json  sentinal-fuzz_127.0.0.1_51941_20260627_194253.json  (+70 more)
sentinal_fuzz/: __init__.py  __main__.py  cli.py  cli_display.py  config_loader.py  scoring.py
sentinal_fuzz/analyzer/: __init__.py  (+4 more)
services/: geminiService.ts
templates/: open-redirect.yaml  path-traversal.yaml  security-headers.yaml  sensitive-exposure.yaml  sqli-error.yaml  sqli-time.yaml  ssrf-basic.yaml  ssti-basic.yaml  xss-reflected.yaml
tests/: __init__.py  test_analyzer.py  test_cli.py  test_config_loader.py  test_detectors.py  test_false_positives.py  test_fuzz_engine.py  test_http_crawler.py  test_input_classifier.py  test_integration.py  test_js_crawler.py  test_phishing_detection.py  test_reporters.py  test_template_system.py  test_web_app.py
(+73 files in other folders)
