[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinal-fuzz"
version = "0.1.0"
description = "An intelligent, beginner-friendly DAST (Dynamic Application Security Testing) scanner with smart crawling and template-based fuzzing."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sentinal-Fuzz Contributors" },
]
keywords = ["dast", "security", "scanner", "fuzzing", "crawler", "vulnerability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]

dependencies = [
    "httpx[http2]>=0.27.0",
    "playwright>=1.40.0",
    "typer[all]>=0.12.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "jinja2>=3.1",
    "aiosqlite>=0.20.0",
    "pydantic>=2.5",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
perf = [
    "uvloop>=0.19.0",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
]

[project.scripts]
sentinal-fuzz = "sentinal_fuzz.cli:app"

[project.urls]
Homepage = "https://github.com/sentinal-fuzz/sentinal-fuzz"
Documentation = "https://github.com/sentinal-fuzz/sentinal-fuzz/docs"
Repository = "https://github.com/sentinal-fuzz/sentinal-fuzz"
Issues = "https://github.com/sentinal-fuzz/sentinal-fuzz/issues"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
